# django-hotsauce

./: .gitignore  .hgignore  .hgsigs  .hgtags  HACKING  INSTALL  LICENSE  Makefile  NOTICE  PKG-INFO.in  README  README.md  TODO  local_settings.py.sample  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: django.yml  django3.yml
.hg/: dirstate  hgrc
.hg/cache/: branch2-served  branch2-visible  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-served
.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache
.hg/store/data/: _a_u_t_h_o_r_s.i  _c_h_a_n_g_e_s.i  _c_r_e_d_i_t_s.i  _d_e_p_r_e_c_a_t_e_d.i  _h_a_c_k_i_n_g.i  _i_n_s_t_a_l_l.i  _l_i_c_e_n_s_e.i  _m_a_n_i_f_e_s_t.in.i  _m_i_r_r_o_r_s.txt.i  _makefile.am.i  _makefile.i  _makefile.linux.i  _n_e_w_s.i  _n_o_t_e_s.i  _n_o_t_i_c_e.i  _p_k_g-_i_n_f_o.i  _p_k_g-_i_n_f_o.in.i  _r_e_a_d_m_e.django.i  _r_e_a_d_m_e.i  _r_e_l_e_a_s_e-_n_o_t_e_s.i  _r_e_l_e_a_s_e.txt.i  _t_h_a_n_k_s.i  _t_o_d_o.i  _t_o_d_o.old.i  _v_e_r_s_i_o_n.i  bootstrap.i  bootstrap.py.i  compile.i  compile.sh.i  ez__setup.py.i  setup.cfg.i  setup.py.html.i  setup.py.i  version.h.i  ~2ehgignore.i  ~2ehgsigs.i  ~2ehgtags.i
.hg/store/data/admin/: _p_k_g-_i_n_f_o.in.i
.hg/store/data/artwork/: gthc-ruby-sw33t-321x65.png.i  gthc-ruby-sw33t-large.png.i  gthc-ruby-sw33t.svg.i  notmm-0.3.6-sensimilla-400x403.png.i  notmm-logo-v4-large.png.d  (+7 more)
.hg/wcache/: manifestfulltextcache
examples/: LiveStoreDemo.sh  rundemo-auth.sh  rundemo-uwsgi.sh
examples/lib/satchmo_store/: simple.db
extras/gazpacho/: ChangeLog
lib/djangohotsauce/: release.py
lib/djangohotsauce/controllers/: oauth.py  schevo.py  wsgi.py
lib/djangohotsauce/http/: decorators.py
lib/djangohotsauce/utils/: log.py
src/djangohotsauce/: release.py
src/djangohotsauce/adapters/: utils.py
src/djangohotsauce/controllers/: redis.py  twitter.py  wsgi.py
src/djangohotsauce/datastore/: __init__.py  base.py
src/djangohotsauce/http/: __init__.py
src/djangohotsauce/storage/: base.py
src/djangohotsauce/test/: __init__.py  test_support.py
src/djangohotsauce/utils/: django_compat.py  django_settings.py
src/examples/: djangorc  rundemo.sh
src/extras/: djangorc.sample
src/tools/: 1  httpserver.py  manifest.sh
tests/: djangorc  djangorc.sample  errors.txt  local_settings.py  runtest.sh  runtests.sh  test.py  test_main.py  test_support.py  urls.py
tests/django111/: test_sanity_check.py
tests/django5/: test_main.py
tests/lib/django_sqlite/: db.sqlite3
tests/rss/fixtures/: feeds.txt
tests/test_django5/: pyvenv.cfg
tests/webdav/: todo.txt  webdav.conf
tools/: httpserver.py
(+7370 files in other folders)
